[package]
name = "runedeale"
authors = ["Calin Z. Baenen"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pistoncore-glutin_window = "0.70.0"
piston2d-opengl_graphics = "0.81.0"
piston2d-graphics = "0.42.0"
piston = "0.53.0"